package clients

import (
	"context"
	"fmt"
	"time"

	"reciprocal-clubs-backend/pkg/shared/config"
	"reciprocal-clubs-backend/pkg/shared/logging"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"
)

// ServiceClientConfig holds configuration for service clients
type ServiceClientConfig struct {
	AuthServiceAddress         string
	MemberServiceAddress       string
	ReciprocalServiceAddress   string
	BlockchainServiceAddress   string
	NotificationServiceAddress string
	AnalyticsServiceAddress    string
	GovernanceServiceAddress   string
	ConnectionTimeout          time.Duration
	MaxRetries                 int
	KeepAliveTimeout          time.Duration
}

// DefaultServiceClientConfig returns default configuration for service clients
func DefaultServiceClientConfig() *ServiceClientConfig {
	return &ServiceClientConfig{
		AuthServiceAddress:         "localhost:9081",
		MemberServiceAddress:       "localhost:9082",
		ReciprocalServiceAddress:   "localhost:9083",
		BlockchainServiceAddress:   "localhost:9084",
		NotificationServiceAddress: "localhost:9085",
		AnalyticsServiceAddress:    "localhost:9086",
		GovernanceServiceAddress:   "localhost:9087",
		ConnectionTimeout:          5 * time.Second,
		MaxRetries:                 3,
		KeepAliveTimeout:          30 * time.Second,
	}
}

// Service client implementations

// authServiceClient implementation
type authServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
	config *ServiceClientConfig
}

func NewAuthServiceClient(cfg *config.Config, logger logging.Logger) (AuthServiceClient, error) {
	clientConfig := DefaultServiceClientConfig()

	conn, err := createGRPCConnection(clientConfig.AuthServiceAddress, clientConfig)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to auth service: %w", err)
	}

	return &authServiceClient{
		conn:   conn,
		logger: logger,
		config: clientConfig,
	}, nil
}

func (c *authServiceClient) Close() error {
	return c.conn.Close()
}

func (c *authServiceClient) HealthCheck(ctx context.Context) error {
	// Placeholder implementation - will implement actual gRPC health check
	state := c.conn.GetState()
	if state.String() != "READY" && state.String() != "IDLE" {
		return fmt.Errorf("auth service connection not ready: %s", state)
	}
	return nil
}

// Auth service method implementations (placeholder implementations)
func (c *authServiceClient) RegisterUser(ctx context.Context, req *RegisterUserRequest) (*RegisterUserResponse, error) {
	// Placeholder - will implement actual gRPC call
	c.logger.Info("RegisterUser called", map[string]interface{}{
		"club_id":  req.ClubID,
		"email":    req.Email,
		"username": req.Username,
	})
	return &RegisterUserResponse{
		UserID:  123,
		Success: true,
		Message: "User registered successfully",
	}, nil
}

func (c *authServiceClient) InitiatePasskeyLogin(ctx context.Context, req *InitiatePasskeyLoginRequest) (*InitiatePasskeyLoginResponse, error) {
	// Placeholder implementation
	return &InitiatePasskeyLoginResponse{
		Challenge: []byte("mock-challenge"),
		Success:   true,
	}, nil
}

func (c *authServiceClient) CompletePasskeyLogin(ctx context.Context, req *CompletePasskeyLoginRequest) (*CompletePasskeyLoginResponse, error) {
	// Placeholder implementation
	return &CompletePasskeyLoginResponse{
		Token:        "mock-jwt-token",
		RefreshToken: "mock-refresh-token",
		UserID:       123,
		Success:      true,
	}, nil
}

func (c *authServiceClient) ValidateSession(ctx context.Context, req *ValidateSessionRequest) (*ValidateSessionResponse, error) {
	// Placeholder implementation
	return &ValidateSessionResponse{
		Valid:  true,
		UserID: 123,
		ClubID: 1,
	}, nil
}

func (c *authServiceClient) Logout(ctx context.Context, req *LogoutRequest) (*LogoutResponse, error) {
	// Placeholder implementation
	return &LogoutResponse{Success: true}, nil
}

func (c *authServiceClient) GetUserWithRoles(ctx context.Context, req *GetUserWithRolesRequest) (*GetUserWithRolesResponse, error) {
	// Placeholder implementation
	return &GetUserWithRolesResponse{
		UserID:      req.UserID,
		Email:       "user@example.com",
		Username:    "testuser",
		Roles:       []string{"member", "user"},
		Permissions: []string{"read", "write"},
	}, nil
}

func (c *authServiceClient) UpdateUser(ctx context.Context, req *UpdateUserRequest) (*UpdateUserResponse, error) {
	// Placeholder implementation
	return &UpdateUserResponse{Success: true, Message: "User updated successfully"}, nil
}

func (c *authServiceClient) DeleteUser(ctx context.Context, req *DeleteUserRequest) (*DeleteUserResponse, error) {
	// Placeholder implementation
	return &DeleteUserResponse{Success: true}, nil
}

func (c *authServiceClient) CreateRole(ctx context.Context, req *CreateRoleRequest) (*CreateRoleResponse, error) {
	// Placeholder implementation
	return &CreateRoleResponse{RoleID: 456, Success: true}, nil
}

func (c *authServiceClient) AssignRole(ctx context.Context, req *AssignRoleRequest) (*AssignRoleResponse, error) {
	// Placeholder implementation
	return &AssignRoleResponse{Success: true}, nil
}

func (c *authServiceClient) RemoveRole(ctx context.Context, req *RemoveRoleRequest) (*RemoveRoleResponse, error) {
	// Placeholder implementation
	return &RemoveRoleResponse{Success: true}, nil
}

func (c *authServiceClient) CheckPermission(ctx context.Context, req *CheckPermissionRequest) (*CheckPermissionResponse, error) {
	// Placeholder implementation
	return &CheckPermissionResponse{Allowed: true}, nil
}

func (c *authServiceClient) GetUserPermissions(ctx context.Context, req *GetUserPermissionsRequest) (*GetUserPermissionsResponse, error) {
	// Placeholder implementation
	return &GetUserPermissionsResponse{
		Permissions: []string{"read", "write", "admin"},
	}, nil
}

// memberServiceClient implementation
type memberServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
	config *ServiceClientConfig
}

func NewMemberServiceClient(cfg *config.Config, logger logging.Logger) (MemberServiceClient, error) {
	clientConfig := DefaultServiceClientConfig()

	conn, err := createGRPCConnection(clientConfig.MemberServiceAddress, clientConfig)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to member service: %w", err)
	}

	return &memberServiceClient{
		conn:   conn,
		logger: logger,
		config: clientConfig,
	}, nil
}

func (c *memberServiceClient) Close() error {
	return c.conn.Close()
}

func (c *memberServiceClient) HealthCheck(ctx context.Context) error {
	state := c.conn.GetState()
	if state.String() != "READY" && state.String() != "IDLE" {
		return fmt.Errorf("member service connection not ready: %s", state)
	}
	return nil
}

// Member service method implementations (placeholder implementations)
func (c *memberServiceClient) CreateMember(ctx context.Context, req *CreateMemberRequest) (*CreateMemberResponse, error) {
	return &CreateMemberResponse{
		MemberID:     789,
		MemberNumber: "M001",
		Success:      true,
	}, nil
}

func (c *memberServiceClient) GetMember(ctx context.Context, req *GetMemberRequest) (*GetMemberResponse, error) {
	return &GetMemberResponse{
		MemberID:       req.MemberID,
		MemberNumber:   "M001",
		MembershipType: "REGULAR",
		Status:         "ACTIVE",
	}, nil
}

func (c *memberServiceClient) UpdateMember(ctx context.Context, req *UpdateMemberRequest) (*UpdateMemberResponse, error) {
	return &UpdateMemberResponse{Success: true}, nil
}

func (c *memberServiceClient) DeleteMember(ctx context.Context, req *DeleteMemberRequest) (*DeleteMemberResponse, error) {
	return &DeleteMemberResponse{Success: true}, nil
}

func (c *memberServiceClient) ListMembers(ctx context.Context, req *ListMembersRequest) (*ListMembersResponse, error) {
	return &ListMembersResponse{
		Members: []Member{
			{MemberID: 1, MemberNumber: "M001", MembershipType: "REGULAR", Status: "ACTIVE"},
			{MemberID: 2, MemberNumber: "M002", MembershipType: "PREMIUM", Status: "ACTIVE"},
		},
		Total: 2,
	}, nil
}

func (c *memberServiceClient) SearchMembers(ctx context.Context, req *SearchMembersRequest) (*SearchMembersResponse, error) {
	return &SearchMembersResponse{
		Members: []Member{
			{MemberID: 1, MemberNumber: "M001", MembershipType: "REGULAR", Status: "ACTIVE"},
		},
		Total: 1,
	}, nil
}

func (c *memberServiceClient) SuspendMember(ctx context.Context, req *SuspendMemberRequest) (*SuspendMemberResponse, error) {
	return &SuspendMemberResponse{Success: true}, nil
}

func (c *memberServiceClient) ActivateMember(ctx context.Context, req *ActivateMemberRequest) (*ActivateMemberResponse, error) {
	return &ActivateMemberResponse{Success: true}, nil
}

func (c *memberServiceClient) GetMemberAnalytics(ctx context.Context, req *GetMemberAnalyticsRequest) (*GetMemberAnalyticsResponse, error) {
	return &GetMemberAnalyticsResponse{
		TotalMembers:  100,
		ActiveMembers: 95,
		NewThisMonth:  10,
		MembershipTypes: map[string]int32{
			"REGULAR": 70,
			"PREMIUM": 25,
			"LIFETIME": 5,
		},
	}, nil
}

// reciprocalServiceClient implementation
type reciprocalServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
	config *ServiceClientConfig
}

func NewReciprocalServiceClient(cfg *config.Config, logger logging.Logger) (ReciprocalServiceClient, error) {
	clientConfig := DefaultServiceClientConfig()

	conn, err := createGRPCConnection(clientConfig.ReciprocalServiceAddress, clientConfig)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to reciprocal service: %w", err)
	}

	return &reciprocalServiceClient{
		conn:   conn,
		logger: logger,
		config: clientConfig,
	}, nil
}

func (c *reciprocalServiceClient) Close() error {
	return c.conn.Close()
}

func (c *reciprocalServiceClient) HealthCheck(ctx context.Context) error {
	state := c.conn.GetState()
	if state.String() != "READY" && state.String() != "IDLE" {
		return fmt.Errorf("reciprocal service connection not ready: %s", state)
	}
	return nil
}

// Reciprocal service method implementations (placeholder implementations)
func (c *reciprocalServiceClient) CreateAgreement(ctx context.Context, req *CreateAgreementRequest) (*CreateAgreementResponse, error) {
	return &CreateAgreementResponse{AgreementID: 111, Success: true}, nil
}

func (c *reciprocalServiceClient) GetAgreement(ctx context.Context, req *GetAgreementRequest) (*GetAgreementResponse, error) {
	return &GetAgreementResponse{
		AgreementID:   req.AgreementID,
		PartnerClubID: 2,
		Status:        "ACTIVE",
		Terms:         "Standard reciprocal terms",
	}, nil
}

func (c *reciprocalServiceClient) UpdateAgreement(ctx context.Context, req *UpdateAgreementRequest) (*UpdateAgreementResponse, error) {
	return &UpdateAgreementResponse{Success: true}, nil
}

func (c *reciprocalServiceClient) ListAgreements(ctx context.Context, req *ListAgreementsRequest) (*ListAgreementsResponse, error) {
	return &ListAgreementsResponse{
		Agreements: []Agreement{
			{AgreementID: 1, PartnerClubID: 2, Status: "ACTIVE", Terms: "Standard terms"},
			{AgreementID: 2, PartnerClubID: 3, Status: "PENDING", Terms: "Premium terms"},
		},
		Total: 2,
	}, nil
}

func (c *reciprocalServiceClient) RequestVisit(ctx context.Context, req *RequestVisitRequest) (*RequestVisitResponse, error) {
	return &RequestVisitResponse{VisitID: 222, Success: true}, nil
}

func (c *reciprocalServiceClient) ConfirmVisit(ctx context.Context, req *ConfirmVisitRequest) (*ConfirmVisitResponse, error) {
	return &ConfirmVisitResponse{Success: true}, nil
}

func (c *reciprocalServiceClient) CheckInVisit(ctx context.Context, req *CheckInVisitRequest) (*CheckInVisitResponse, error) {
	return &CheckInVisitResponse{Success: true, CheckInTime: "2024-01-01T10:00:00Z"}, nil
}

func (c *reciprocalServiceClient) CheckOutVisit(ctx context.Context, req *CheckOutVisitRequest) (*CheckOutVisitResponse, error) {
	return &CheckOutVisitResponse{Success: true, CheckOutTime: "2024-01-01T15:00:00Z"}, nil
}

func (c *reciprocalServiceClient) ListVisits(ctx context.Context, req *ListVisitsRequest) (*ListVisitsResponse, error) {
	return &ListVisitsResponse{
		Visits: []Visit{
			{VisitID: 1, MemberID: 123, TargetClub: 2, Status: "CONFIRMED"},
			{VisitID: 2, MemberID: 124, TargetClub: 3, Status: "COMPLETED"},
		},
		Total: 2,
	}, nil
}

func (c *reciprocalServiceClient) GetVisitAnalytics(ctx context.Context, req *GetVisitAnalyticsRequest) (*GetVisitAnalyticsResponse, error) {
	return &GetVisitAnalyticsResponse{
		TotalVisits:     500,
		VisitsThisMonth: 45,
		PopularClubs: map[string]int32{
			"Club A": 150,
			"Club B": 120,
			"Club C": 100,
		},
	}, nil
}

// blockchainServiceClient implementation
type blockchainServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
	config *ServiceClientConfig
}

func NewBlockchainServiceClient(cfg *config.Config, logger logging.Logger) (BlockchainServiceClient, error) {
	clientConfig := DefaultServiceClientConfig()

	conn, err := createGRPCConnection(clientConfig.BlockchainServiceAddress, clientConfig)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to blockchain service: %w", err)
	}

	return &blockchainServiceClient{
		conn:   conn,
		logger: logger,
		config: clientConfig,
	}, nil
}

func (c *blockchainServiceClient) Close() error {
	return c.conn.Close()
}

func (c *blockchainServiceClient) HealthCheck(ctx context.Context) error {
	state := c.conn.GetState()
	if state.String() != "READY" && state.String() != "IDLE" {
		return fmt.Errorf("blockchain service connection not ready: %s", state)
	}
	return nil
}

// Blockchain service method implementations (placeholder implementations)
func (c *blockchainServiceClient) SubmitTransaction(ctx context.Context, req *SubmitTransactionRequest) (*SubmitTransactionResponse, error) {
	return &SubmitTransactionResponse{
		TransactionID: "tx_123456789",
		Success:       true,
	}, nil
}

func (c *blockchainServiceClient) GetTransaction(ctx context.Context, req *GetTransactionRequest) (*GetTransactionResponse, error) {
	return &GetTransactionResponse{
		TransactionID: req.TransactionID,
		Type:          "VISIT",
		Data:          []byte("transaction data"),
		Status:        "CONFIRMED",
		Timestamp:     "2024-01-01T10:00:00Z",
	}, nil
}

func (c *blockchainServiceClient) ListTransactions(ctx context.Context, req *ListTransactionsRequest) (*ListTransactionsResponse, error) {
	return &ListTransactionsResponse{
		Transactions: []Transaction{
			{TransactionID: "tx_1", Type: "VISIT", Status: "CONFIRMED", Timestamp: "2024-01-01T10:00:00Z"},
			{TransactionID: "tx_2", Type: "AGREEMENT", Status: "PENDING", Timestamp: "2024-01-01T11:00:00Z"},
		},
		Total: 2,
	}, nil
}

func (c *blockchainServiceClient) QueryLedger(ctx context.Context, req *QueryLedgerRequest) (*QueryLedgerResponse, error) {
	return &QueryLedgerResponse{
		Results: []map[string]interface{}{
			{"key": "value1", "type": "visit"},
			{"key": "value2", "type": "agreement"},
		},
	}, nil
}

func (c *blockchainServiceClient) GetBlockchainStatus(ctx context.Context, req *GetBlockchainStatusRequest) (*GetBlockchainStatusResponse, error) {
	return &GetBlockchainStatusResponse{
		Status:      "HEALTHY",
		BlockHeight: 12345,
		NodeCount:   4,
	}, nil
}

// Placeholder implementations for remaining services

type notificationServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
}

func NewNotificationServiceClient(cfg *config.Config, logger logging.Logger) (NotificationServiceClient, error) {
	// Placeholder implementation - will be completed when notification service is done
	return &notificationServiceClient{
		logger: logger,
	}, nil
}

func (c *notificationServiceClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}

func (c *notificationServiceClient) HealthCheck(ctx context.Context) error {
	// Placeholder - always return healthy for now
	return nil
}

type analyticsServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
}

func NewAnalyticsServiceClient(cfg *config.Config, logger logging.Logger) (AnalyticsServiceClient, error) {
	// Placeholder implementation - will be completed when analytics service is done
	return &analyticsServiceClient{
		logger: logger,
	}, nil
}

func (c *analyticsServiceClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}

func (c *analyticsServiceClient) HealthCheck(ctx context.Context) error {
	// Placeholder - always return healthy for now
	return nil
}

type governanceServiceClient struct {
	conn   *grpc.ClientConn
	logger logging.Logger
}

func NewGovernanceServiceClient(cfg *config.Config, logger logging.Logger) (GovernanceServiceClient, error) {
	// Placeholder implementation - will be completed when governance service is done
	return &governanceServiceClient{
		logger: logger,
	}, nil
}

func (c *governanceServiceClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}

func (c *governanceServiceClient) HealthCheck(ctx context.Context) error {
	// Placeholder - always return healthy for now
	return nil
}

// Helper function to create gRPC connections with proper configuration
func createGRPCConnection(address string, config *ServiceClientConfig) (*grpc.ClientConn, error) {
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithTimeout(config.ConnectionTimeout),
		grpc.WithKeepaliveParams(keepalive.ClientParameters{
			Time:                config.KeepAliveTimeout,
			Timeout:             5 * time.Second,
			PermitWithoutStream: true,
		}),
	}

	conn, err := grpc.Dial(address, opts...)
	if err != nil {
		return nil, fmt.Errorf("failed to create gRPC connection to %s: %w", address, err)
	}

	return conn, nil
}